--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,12 @@ services:
 before_install:
   - cd ./app
   - export DEV=true
-  - docker compose build
+  - docker-compose build
 
 script:
   - docker-compose run --rm app sh -c "pylint ."
-  - docker-compose run --rm app sh -c "./wait_for_db.sh && pytest"
+  - docker-compose run --rm app sh -c "./wait_for_db.sh && coverage run --source=pytest ./app/tests"
 
 after_script:
+  - coveralls
   - export DEV=false
