--- a/app/requirements.dev.txt
+++ b/app/requirements.dev.txt
@@ -15,3 +15,11 @@ iniconfig==2.0.0
 packaging==23.0
 pluggy==1.0.0
 pytest==7.2.1
+certifi==2022.12.7
+charset-normalizer==3.0.1
+coverage==6.5.0
+coveralls==3.3.1
+docopt==0.6.2
+idna==3.4
+requests==2.28.2
+urllib3==1.26.14
