--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,12 @@ services:
   - docker
 
 before_install:
-  - cd ./app
   - export DEV=true
   - docker-compose build
 
 script:
-  - docker-compose run --rm app sh -c "pylint"
-  - docker-compose run --rm app sh -c "./app/wait_for_db.sh && coverage run --source=pytest ./app/tests"
+  - docker-compose run --rm app sh -c "pylint ./app"
+  - docker-compose run --rm app sh -c "./app/wait_for_db.sh && coverage run -m pytest"
 
 after_script:
   - export DEV=false
