--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,13 +1,18 @@
+alembic==1.9.4
 click==8.1.3
+Faker==17.6.0
 Flask==2.2.3
+Flask-Migrate==4.0.4
 Flask-SQLAlchemy==3.0.3
 greenlet==2.0.2
 itsdangerous==2.1.2
 Jinja2==3.1.2
+Mako==1.2.4
 MarkupSafe==2.1.2
 mysqlclient==2.1.1
-python-dotenv==0.21.1
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+six==1.16.0
 SQLAlchemy==2.0.4
 typing_extensions==4.5.0
 Werkzeug==2.2.3
-pylint==2.16.2
