--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,8 @@ services:
   db:
     image: mysql:8.0.32-debian
     container_name: mysql
-    # env_file:
-    #   - ./app/.env
     environment:
-      - MYSQL_DATABASE=${DEV_DB_NAME}
+      - MYSQL_DATABASE=${DB_NAME}
       - MYSQL_USER=${DB_USER}
       - MYSQL_PASSWORD=${DB_PASSWORD}
       - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
@@ -16,24 +14,32 @@ services:
     volumes:
       - mysql_data:/var/lib/mysql
 
+  db-test:
+    image: mysql:8.0.32-debian
+    container_name: mysql-test
+    environment:
+      - MYSQL_DATABASE=${TEST_DB_NAME}
+      - MYSQL_USER=${DB_USER}
+      - MYSQL_PASSWORD=${DB_PASSWORD}
+      - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
+    ports:
+      - "${DB_TEST_PORT}:${DB_PORT}"
+
   app:
     build:
       context: .
       args:
         - DEV=${DEV}
-    # env_file:
-    #   - ./app/.env
     environment:
       - DEV=${DEV}
       - SECRET_KEY=${SECRET_KEY}
       - DB=${DB}
       - DB_USER=${DB_USER}
       - DB_PASSWORD=${DB_PASSWORD}
-      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
-      - DB_HOST=${DB_HOST}
       - DB_PORT=${DB_PORT}
-      - DEV_DB_NAME=${DEV_DB_NAME}
-      - PROD_DB_NAME=${PROD_DB_NAME}
+      - DB_TEST_PORT=${DB_TEST_PORT}
+      - DB_NAME=${DB_NAME}
+      - TEST_DB_NAME=${TEST_DB_NAME}
       - COVERAGE_FILE=${COVERAGE_FILE}
     container_name: flask
     ports:
@@ -41,9 +47,10 @@ services:
     volumes:
       - ./app/:/home/app-user/book-catalog/app
     command: >
-      sh -c "./wait_for_db.sh && flask run --host=0.0.0.0"
+      sh -c "./app/wait_for_db.sh && flask run --host=0.0.0.0"
     depends_on:
       - db
+      - db-test
 
 volumes:
   mysql_data:
