--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -2,6 +2,7 @@ alembic==1.9.4
 click==8.1.3
 Faker==17.6.0
 Flask==2.2.3
+flask-marshmallow==0.14.0
 Flask-Migrate==4.0.4
 Flask-SQLAlchemy==3.0.3
 greenlet==2.0.2
@@ -9,7 +10,10 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.2.4
 MarkupSafe==2.1.2
+marshmallow==3.19.0
+marshmallow-sqlalchemy==0.29.0
 mysqlclient==2.1.1
+packaging==23.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 six==1.16.0
