--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
+language: python
 sudo: required
 services:
   - docker
 
 before_install:
   - export DEV=true
+  - pip install pyyaml
   - docker-compose build
 
 script:
