--- a/app/requirements.dev.txt
+++ b/app/requirements.dev.txt
@@ -1,25 +1,26 @@
 astroid==2.14.2
-dill==0.3.6
-isort==5.12.0
-lazy-object-proxy==1.9.0
-mccabe==0.7.0
-platformdirs==3.0.0
-pylint==2.16.2
-tomli==2.0.1
-tomlkit==0.11.6
-typing_extensions==4.5.0
-wrapt==1.15.0
 attrs==22.2.0
-exceptiongroup==1.1.0
-iniconfig==2.0.0
-packaging==23.0
-pluggy==1.0.0
-pytest==7.2.1
 certifi==2022.12.7
 charset-normalizer==3.0.1
 coverage==6.5.0
 coveralls==3.3.1
+dill==0.3.6
 docopt==0.6.2
+exceptiongroup==1.1.0
 idna==3.4
+iniconfig==2.0.0
+isort==5.12.0
+lazy-object-proxy==1.9.0
+mccabe==0.7.0
+packaging==23.0
+platformdirs==3.0.0
+pluggy==1.0.0
+pylint==2.16.2
+pytest==7.2.1
+PyYAML==6.0
 requests==2.28.2
+tomli==2.0.1
+tomlkit==0.11.6
+typing_extensions==4.5.0
 urllib3==1.26.14
+wrapt==1.15.0
