--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,9 +1,11 @@
 alembic==1.9.4
+aniso8601==9.0.1
 click==8.1.3
 Faker==17.6.0
 Flask==2.2.3
 flask-marshmallow==0.14.0
 Flask-Migrate==4.0.4
+Flask-RESTful==0.3.9
 Flask-SQLAlchemy==3.0.3
 greenlet==2.0.2
 itsdangerous==2.1.2
@@ -16,6 +18,7 @@ mysqlclient==2.1.1
 packaging==23.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
+pytz==2022.7.1
 six==1.16.0
 SQLAlchemy==2.0.4
 typing_extensions==4.5.0
