--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,7 @@ services:
       - "5000:5000"
     volumes:
       - ./app/:/home/app-user/book-catalog/app
+      - coverage:/home/app-user/book-catalog/coverage
     command: >
       sh -c "./app/wait_for_db.sh && flask run --host=0.0.0.0"
     depends_on:
@@ -55,3 +56,4 @@ services:
 
 volumes:
   mysql_data:
+  coverage:
