--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       - "${DB_PORT}:${DB_PORT}"
     volumes:
       - mysql_data:/var/lib/mysql
+    networks:
+      - book-catalog-network
 
   db-test:
     image: mysql:8.0.32-debian
@@ -24,10 +26,13 @@ services:
       - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
     ports:
       - "${DB_TEST_PORT}:${DB_PORT}"
+    networks:
+      - book-catalog-network
 
-  app:
+  flask:
     build:
-      context: .
+      context: ./
+      dockerfile: ./dockerfiles/flask/Dockerfile
       args:
         - DEV=${DEV}
     environment:
@@ -49,11 +54,31 @@ services:
       - ./app/:/home/app-user/book-catalog/app
       - coverage:/home/app-user/book-catalog/coverage
     command: >
-      sh -c "./app/wait_for_db.sh && flask run --host=0.0.0.0"
+      sh -c "./app/wait_for_db.sh && gunicorn --bind=0.0.0.0:5000 'app:create_app()'"
+    networks:
+      book-catalog-network:
+        aliases:
+          - flask
     depends_on:
       - db
       - db-test
 
+  nginx:
+    image: nginx:1.23.3-alpine-slim
+    container_name: nginx
+    volumes:
+      - ./dockerfiles/nginx/default.conf:/etc/nginx/conf.d/default.conf
+    ports:
+      - 80:80
+    networks:
+      - book-catalog-network
+    depends_on:
+      - flask
+
 volumes:
   mysql_data:
   coverage:
+
+
+networks:
+  book-catalog-network:
