--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,9 @@ before_install:
   - docker-compose build
 
 script:
-  - docker-compose run --rm app sh -c "pylint ./app"
-  - docker-compose run --rm app sh -c "./app/wait_for_db.sh && coverage run -m pytest"
+  - docker-compose run --rm flask sh -c "pylint ./app"
+  - docker-compose run --rm flask sh -c "./app/wait_for_db.sh && coverage run -m pytest"
 
 after_script:
   - export DEV=false
-  - docker-compose run --rm app sh -c "coveralls"
+  - docker-compose run --rm flask sh -c "coveralls"
