--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
   - docker-compose build
 
 script:
-  - docker-compose run --rm flask sh -c "pylint ./app"
+  - docker-compose run --rm flask sh -c "pylint ./app && pylint ./tests"
   - docker-compose run --rm flask sh -c "./app/wait_for_db.sh && coverage run -m pytest"
 
 after_script:
