--- a/dockerfiles/flask/requirements/requirements.dev.txt
+++ b/dockerfiles/flask/requirements/requirements.dev.txt
@@ -17,7 +17,7 @@ platformdirs==3.0.0
 pluggy==1.0.0
 pylint==2.16.2
 pytest==7.2.1
-PyYAML==6.0
+PyYAML!=6.0.0,!=5.4.0,!=5.4.1
 requests==2.28.2
 tomli==2.0.1
 tomlkit==0.11.6
